fixed jbang i18